--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -31,7 +31,7 @@
 	</h2>
 	
 	<p class="txt m border-box">
-		Pierre spends his days <del>making hard-nosed business decisions</del> doing front-end design and development at Mine.
+		Pierre spends his days doing front-end design and development at Mine.
 		He graduated in Information Design from the University of the Arts, London, and loves all things layout- and type-related.
 		He worked in ad planning, political polling and media at WPP before moving to Stanford for his MBA. 
 		Post-Stanford, he was Twitter's first PMM, working on Promoted Tweets, Accounts and Trends.
