--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -23,7 +23,7 @@ a:hover { text-decoration: none; }
 	z-index: -1;
 	top: 0;
 	width: 100%;
-	height: 456px;
+	height: 450px;
 	background: url('/images/backgrounds/bg-strip.png') repeat-x top left; }
 
 .header-home { text-align: center; width: 904px; margin: 0 auto; }
@@ -44,7 +44,7 @@ a:hover { text-decoration: none; }
 	text-align: center; }
 	
 h2 {
-	padding: 26px 0 28px;
+	padding: 26px 0 22px;
 	font-size: 26px;
 	text-align: center;
 	font-weight: normal;
@@ -130,8 +130,7 @@ ul { margin: 0 !important; }
 	text-align: left;
 	width: 576px;
 	padding: 12px;
-	background-image: url('/images/loading/loading-snake-333-F5F5F5.gif') center no-repeat;
-	background-color: #999;
+	background: #999 url('/images/loading/loading-snake-FFF-999.gif') center no-repeat;
 	margin-left: -298px;
 	margin-top: 0;
 /* 	top: 48px; */
