--- a/app/views/home/_story.html.erb
+++ b/app/views/home/_story.html.erb
@@ -89,7 +89,7 @@
       </div>
       
       <h2>
-        Mine is a directory <br class="rwd-show">of people and purchases.
+        Mine is a directory <br class="rwd-show">of people and their purchases.
       </h2>
       
       <div style="text-align: center;">
