--- a/app/views/user_mailer/_action_button.text.html.erb
+++ b/app/views/user_mailer/_action_button.text.html.erb
@@ -12,9 +12,9 @@
 	  <td align="center">
 	  	<font face="Arial" color="white">
 				<a href="<%=url%>"
-					style="font-family: 'Helvetica'; -webkit-font-smoothing: antialiased; display: inline-block; padding: 12px 20px; font-size:14px; color:#FFF; background: #006FB1; text-decoration:none;
-						background: #006FB1 url('<%=image_path "#{(is_dev? ? "http://#{CONFIG[:host]}/images/" : '')}alert-overlay.png"%>') repeat-x; border-bottom: 1px solid #ccc;
-						-webkit-border-radius:5px; -moz-border-radius:5px; border-radius:5px;">
+					style="font-family: 'Helvetica Neue', 'Helvetica'; -webkit-font-smoothing: antialiased; display: inline-block; padding: 12px 20px; font-size:16px; color:#FFF; background: #F60; text-decoration:none;
+						background: #F60 url('<%=image_path "#{(is_dev? ? "http://#{CONFIG[:host]}/images/" : '')}alert-overlay.png"%>') repeat-x; border-bottom: 2px solid #ddd;
+						-webkit-border-radius:3px; -moz-border-radius:3px; border-radius:3px;">
 	        	<b><%=text%></b>
 	      </a>
 	    </font>
